examples/test/testpolicy7604.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7604
  namespace: namespace184
spec:
  podSelector:
    matchLabels:
      key18: value22
      key40: value34
      key3: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value38
          key41: value41
          key35: value11
      podSelector:
        matchLabels:
          key16: value19
          key24: value41
